--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,12 @@ body {
   transition: all 0.5s;
 }
 
+@media (max-width: 673px) {
+  #logo {
+    margin-left: 20px;
+  }
+}
+
 #header #logo h1 {
   font-size: 34px;
   margin: 0;
@@ -52,75 +58,6 @@ body {
   }
   #header #logo img {
     max-height: 40px;
-  }
-}
-
-.banner-area {
-  background: url(../img/bg_photo_1@2x.png) center;
-  background-size: cover;
-}
-
-.dark-overlay {
-  width: 100%;
-  background: rgba(0, 0, 0, 0.3);
-}
-
-@media (max-width: 2000px) {
-  .banner-area .fullscreen {
-    height: 800px !important;
-  }
-}
-
-.banner-content {
-  margin-top: 10rem;
-  margin-right: 9rem;
-  text-align: start;
-}
-
-.banner-content h1 {
-  color: #fff;
-  font-size: 72px;
-  font-weight: 700;
-  line-height: 1em;
-  margin-top: 20px;
-}
-
-.banner-content h1 span {
-  font-weight: 700;
-}
-
-@media (max-width: 991.98px) {
-  .banner-content h1 {
-    font-size: 36px;
-  }
-}
-
-@media (max-width: 991.98px) {
-  .banner-content h1 br {
-    display: none;
-  }
-}
-
-@media (max-width: 1199.98px) {
-  .banner-content h1 {
-    font-size: 45px;
-  }
-}
-
-@media (max-width: 414px) {
-  .banner-content h1 {
-    font-size: 40px;
-  }
-}
-
-.banner-content h5 {
-  font-weight: 400;
-  letter-spacing: 3px;
-}
-
-@media (max-width: 1280px) {
-  .banner-content br {
-    display: none;
   }
 }
 
@@ -236,7 +173,7 @@ body {
 }
 
 .nav-menu ul li:hover > a {
-  color: #235ee7;
+  color: #dc1515;
 }
 
 .nav-menu ul ul {
@@ -328,7 +265,7 @@ body {
 }
 
 #mobile-nav ul .menu-has-children i.fa-chevron-up {
-  color: #235ee7;
+  color: #dc1515;
 }
 
 #mobile-nav ul .menu-has-children li a {
@@ -336,7 +273,215 @@ body {
 }
 
 #mobile-nav ul .menu-item-active {
-  color: #235ee7;
+  color: #dc1515;
+}
+
+#mobile-body-overly {
+  width: 100%;
+  height: 100%;
+  z-index: 997;
+  top: 0;
+  left: 0;
+  position: fixed;
+  background: rgba(0, 0, 0, 0.7);
+  display: none;
+}
+
+/* Mobile Nav body classes */
+body.mobile-nav-active {
+  overflow: hidden;
+}
+
+body.mobile-nav-active #mobile-nav {
+  left: 0;
+}
+
+body.mobile-nav-active #mobile-nav-toggle {
+  color: #fff;
+}
+
+.section-gap {
+  padding: 120px 0;
+}
+
+.section-title {
+  padding-bottom: 30px;
+}
+
+.section-title h2 {
+  margin-bottom: 20px;
+}
+
+.section-title p {
+  font-size: 16px;
+  margin-bottom: 0;
+}
+
+@media (max-width: 991.98px) {
+  .section-title p br {
+    display: none;
+  }
+}
+
+.p1-gradient-bg,
+.primary-btn,
+.home-about-area .home-about-right .primary-btn,
+.single-unique-product:hover .primary-btn,
+.faq-left .card-header,
+.single-footer-widget .click-btn,
+.generic-banner {
+  background-image: -moz-linear-gradient(0deg, ##dc1515 0%, #4ae7fa 100%);
+  background-image: -webkit-linear-gradient(0deg, #dc1515 0%, #4ae7fa 100%);
+  background-image: -ms-linear-gradient(0deg, #dc1515 0%, #4ae7fa 100%);
+}
+
+.p1-gradient-color,
+.footer-social a:hover i,
+.single-footer-widget .bb-btn {
+  background: -moz-linear-gradient(0deg, #dc1515 0%, #4ae7fa 100%);
+  background: -webkit-linear-gradient(0deg, #dc1515 0%, #4ae7fa 100%);
+  background: -ms-linear-gradient(0deg, #dc1515 0%, #4ae7fa 100%);
+  /* -webkit-background-clip: text; */
+  -webkit-text-fill-color: transparent;
+}
+
+.primary-btn {
+  line-height: 36px;
+  padding-left: 30px;
+  padding-right: 60px;
+  border-radius: 25px;
+  border: none;
+  color: #fff;
+  display: inline-block;
+  font-weight: 500;
+  position: relative;
+  -webkit-transition: all 0.3s ease 0s;
+  -moz-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  text-transform: uppercase;
+  position: relative;
+}
+
+.primary-btn:focus {
+  outline: none;
+}
+
+.primary-btn span {
+  color: #fff;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-60%);
+  right: 30px;
+  -webkit-transition: all 0.3s ease 0s;
+  -moz-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
+.primary-btn:hover {
+  color: #fff;
+}
+
+.primary-btn:hover span {
+  color: #fff;
+  right: 20px;
+}
+
+.primary-btn.white {
+  border: 1px solid #fff;
+  color: #fff;
+}
+
+.primary-btn.white span {
+  color: #fff;
+}
+
+.primary-btn.white:hover {
+  background: #fff;
+  color: #dc1515;
+}
+
+.primary-btn.white:hover span {
+  color: #dc1515;
+}
+
+.overlay {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+.banner-area {
+  background: url(../img/bg_photo_1@2x.png) center;
+  background-size: cover;
+}
+
+.dark-overlay {
+  width: 100%;
+  background: rgba(0, 0, 0, 0.3);
+}
+
+@media (max-width: 2000px) {
+  .banner-area .fullscreen {
+    height: 800px !important;
+  }
+}
+
+.banner-content {
+  margin-top: 10rem;
+  margin-right: 9rem;
+  text-align: start;
+}
+
+.banner-content h1 {
+  color: #fff;
+  font-size: 72px;
+  font-weight: 700;
+  line-height: 1em;
+  margin-top: 20px;
+}
+
+.banner-content h1 span {
+  font-weight: 700;
+}
+
+@media (max-width: 991.98px) {
+  .banner-content h1 {
+    font-size: 36px;
+  }
+}
+
+@media (max-width: 991.98px) {
+  .banner-content h1 br {
+    display: none;
+  }
+}
+
+@media (max-width: 1199.98px) {
+  .banner-content h1 {
+    font-size: 45px;
+  }
+}
+
+@media (max-width: 414px) {
+  .banner-content h1 {
+    font-size: 40px;
+  }
+}
+
+.banner-content h5 {
+  font-weight: 400;
+  letter-spacing: 3px;
+}
+
+@media (max-width: 1280px) {
+  .banner-content br {
+    display: none;
+  }
 }
 
 .div-img-bg {
